# esp32_lvgl_band

./: CMakeLists.txt  partitions_user.csv  sdkconfig  sdkconfig.old
components/bsp/: CMakeLists.txt  dht11.c  sdcard.c  sdcard.h  st7789_driver.c
components/jpeg/: CMakeLists.txt  img_converters.h  to_bmp.c
main/: CMakeLists.txt  lv_port.c  lvgl_port2.c  mjpeg_frame.c  mjpeg_frame.h  ui.mjpeg.c  ui.mjpeg.h  ui_temp_hum.c  ui_temp_hum.h  uiled.c  uiled.h
